# gqview

./: ChangeLog  Makefile.in  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  gqview.desktop
doc/: Makefile.in
po/: POTFILES.in  be.gmo  be.po  bg.gmo  bg.po  ca.gmo  ca.po  cs.gmo  cs.po  de.gmo  de.po  eo.gmo  eo.po  es.gmo  es.po  eu.gmo  eu.po  fi.gmo  fi.po  fr.gmo  fr.po  gqview.pot  hu.gmo  hu.po  it.gmo  it.po  ja.gmo  ja.po  nl.gmo  nl.po  pl.gmo  pl.po  pt_BR.gmo  pt_BR.po  ru.gmo  ru.po  sk.gmo  sk.po  sv.gmo  sv.po  (+5 more)
src/: Makefile.am  Makefile.in  bar_exif.h  cache.h  collect-dlg.c  collect-table.c  collect.c  color-man.c  dupe.c  editors.c  exif.c  format_canon.c  format_fuji.c  format_nikon.c  format_olympus.c  globals.c  gqview.h  image-load.c  info.c  layout.c  layout_config.c  layout_image.c  layout_util.c  layout_util.h  main.c  pan-calendar.c  pan-util.c  pan-view.c  pixbuf-renderer.c  pixbuf_util.c  preferences.c  print.c  rcfile.c  search.c  similar.c  thumb.c  thumb_standard.h  typedefs.h  ui_bookmark.c  ui_help.c  (+10 more)
src/icons/: Makefile.in
src/icons/svg/: Makefile.in
